--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "firebase": "^10.12.2",
+    "firebase": "^11.2.0",
     "firebase-admin": "^12.2.0",
     "lucide-react": "^0.394.0",
-    "next": "14.2.4",
+    "next": "^14.2.23",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -28,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "esbuild": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
